# lora-kernel-modul

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  lora.c  lora.h
systemd/: me-lora-module.service
udev/rules.d/: 90-lora.rules
udev/sbin/: load_lora_module.sh  mkloranode.sh
